tests/fixtures/effect-compiler/errors/EFX3302-3.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      properties:
        test: { value: null }
}%

CCProgram vs %{
  precision mediump float;
  uniform Test {
    vec4 test;
  };
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
